[package]
name = "ha-sensor-streamer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.24"
imageproc = "0.23"
rusttype = "0.9"
chrono = "0.4"
anyhow = "1.0"
dotenvy = "0.15"
bytes = "1"
async-stream = "0.3"
futures-core = "0.3"
tower = { version = "0.4", features = ["full"] } # tower is required by axum, but sometimes needs to be explicit
gstreamer = "0.23"
gstreamer-app = "0.23"
gstreamer-rtsp-server = "0.23"
gstreamer-video = "0.23"
regex = "1.12.2"

[dev-dependencies]
serial_test = "2.0"
